fixes character sizing on smaller screens for consistency

--- a/frontend/public/css/character.css
+++ b/frontend/public/css/character.css
@@ -297,8 +297,9 @@ path {
 
 @media only screen and (max-height: 1000px) and (max-width: 550px) {
   .character-img img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
+    max-height: 50vh;
   }
 
   #character-page .character-img {
